Base Project created

--- a/AsvesdoService/Models/Models.csproj
+++ b/AsvesdoService/Models/Models.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <Folder Include="CustomerModels\" />
+    <Folder Include="ProductModels\" />
+    <Folder Include="OrderItemModels\" />
     <Folder Include="OrderTypeModels\" />
     <Folder Include="PaymentModels\" />
     <Folder Include="StoreModels\" />
