--- a/AsvesdoService/Configurations/Configurations.csproj
+++ b/AsvesdoService/Configurations/Configurations.csproj
@@ -15,6 +15,8 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Data\Data.csproj" />
+	  <ProjectReference Include="..\Models\Models.csproj" />
+	  <ProjectReference Include="..\Services\Services.csproj" />
 	  <ProjectReference Include="..\StaticData\StaticData.csproj" />
 	</ItemGroup>
 
