--- a/AsvesdoService/ApiOrderServiceTests/ApiOrderServiceTests - Backup.csproj
+++ b/AsvesdoService/ApiOrderServiceTests/ApiOrderServiceTests - Backup.csproj
@@ -21,5 +21,11 @@
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Mvc.Abstractions">
+      <HintPath>..\..\..\..\..\..\..\..\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\6.0.4\ref\net6.0\Microsoft.AspNetCore.Mvc.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 	
 </Project>
