--- a/AvesdoService/ApiOrderServiceTests/ApiOrderServiceTests.csproj
+++ b/AvesdoService/ApiOrderServiceTests/ApiOrderServiceTests.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
@@ -19,6 +29,11 @@
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\OrdersApiService\ApiOrderService.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="TestStaticData\" />
+    <Folder Include="TestServices\" />
   </ItemGroup>
 
 	
